--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/14d0076565.js" crossorigin="anonymous"></script>
     <title>Calculadora IMC</title>
   </head>
   <body>
+    <header class="text">
+      <h1>Bem-vindo, ao meu projeto</h1>
+      <p>Bem simples, para exercitar nesse início.</p>
+      
+    </header>
     <section class="calc-imc">
       <div class="container">
         <h1>CALCULADORA IMC:</h1>
@@ -24,6 +30,10 @@
         <p id="result"></p>
       </div>
     </section>
+    <footer>
+      <a href="https://www.instagram.com/leo.vscn" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/leovasconc/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    </footer>
 
     <script src="main.js"></script>
   </body>
